--- a/index-3.html
+++ b/index-3.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./font/fontawesome-free-5.11.2-web/css/all.min.css">
     <link rel="stylesheet" href="./css/style-3.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Satisfy&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/31bd191ea4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
