--- a/index-5.html
+++ b/index-5.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./font/fontawesome-free-5.11.2-web/css/all.min.css">
     <link rel="stylesheet" href="./css/style-5.css">
     <title>SASS-CSS Nang cao</title>
+    <script src="https://kit.fontawesome.com/31bd191ea4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
