--- a/index-1.html
+++ b/index-1.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./font/fontawesome-free-5.11.2-web/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap&subset=vietnamese"
 		rel="stylesheet">
+		<script src="https://kit.fontawesome.com/31bd191ea4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
