--- a/index-2.html
+++ b/index-2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style-1.css">
     <link rel="stylesheet" href="./css/media-1.css">
     <link rel="stylesheet" href="./font/fontawesome-free-5.11.2-web/css/all.min.css">
-    <!-- <script src="https://kit.fontawesome.com/31bd191ea4.js"></script> -->
+    <script src="https://kit.fontawesome.com/31bd191ea4.js"></script>
 </head>
 
 <body>
