--- a/index-4.html
+++ b/index-4.html
@@ -8,6 +8,7 @@
   <title>Coffee House | New Begin</title>
   <link rel="stylesheet" href="./font/fontawesome-free-5.11.2-web/css/all.min.css">
   <link rel="stylesheet" href="./css/style-4.css">
+  <script src="https://kit.fontawesome.com/31bd191ea4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
